basic html day 2

--- a/model.html
+++ b/model.html
@@ -72,6 +72,95 @@
     <li>acer</li>
     <li>samsung</li>
     <li>asus</li>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <select>
+        <option>a</option>
+        <option>b</option>
+        <option>c</option>
+        <option>d</option>
+        <option>e</option>
+    </select>
+    <br>
+    <br>
+    <br>
+    <p>hello world <small>small text</small> <strong>me strong</strong></strong></p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <table>
+        <thead>
+            <tr>
+                <th>s/n</th>
+                <th>first name</th>
+                <th>last name</th>
+                <th>age</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th>1</th>
+                <th>jamiu</th>
+                <th>ismail</th>
+                <th>10</th>
+            </tr>
+            <tr>
+                <th>2</th>
+                <th>abdullahi</th>
+                <th>ahmad</th>
+                <th>13</th>
+            </tr>
+            <tr>
+                <th>3</th>
+                <th>abdulwaheed</th>
+                <th>yusuph</th>
+                <th>15</th>
+            </tr>
+        </tbody>
+    </table>
+    <br>
+    <br>
+    <br>
+    <br>
+    <footer>copy right @ tiidelab</footer>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <form>
+        <h1>survey form</h1>
+
+        <p>please fill my form</p>
+
+        <label>firs name</label>
+        <input type="text">
+
+        <br>
+        <label>last name</label>
+        <input type="text">
+
+        <br>
+        <label>age</label>
+        <input type="number">
+
+        <button type="submit">submit my form</button>
+    </form>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
 
 
 </body>
